<resources>
    <string name="app_name">Doc Box</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_save_patient">Save Patient Data</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">SAVE</string>
    <string name="action_next_follow_up">Next FollowUp Date</string>
    <string name="action_reload">Reload</string>
    <string name="action_server_ip_address">docbox.co.in/sajid</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="hash_code">Hash</string>
    <string name="subscription_valid_upto">subscriptionValidUpto</string>
    <string name="subscription_valid_from">subscriptionValidFrom</string>
    <string name="account_type">AccountType</string>
    <string name="doctor_type">AccountType</string>
    <string name="account_type_doctor">AccountTypeDoctor</string>
    <string name="account_type_helper">AccountTypeHelper</string>
    <string name="account_type_student">AccountTypeStudent</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Add New Patient</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="male_radio">Male</string>
    <string name="take_photo">Take Photo</string>
    <string name="display_photo">Display Photo</string>
    <string name="female_radio">Female</string>
    <string name="album_name">Patient</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_diagnosis">Enter Diagnosis</string>
    <string name="enter_add">Enter Address</string>
    <string name="gender_select">Gender Select</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_patient_profile">PatientProfile</string>
    <string name="title_activity_edit__patient_">Edit Profile</string>
    <string name="title_activity_test">test</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer closed</string>
    <string name="title_section1">Pre-Op</string>
    <string name="title_section2">Intra-Op</string>
    <string name="title_section3">Post-Op</string>
    <string name="title_section1_physician">Before Treatment</string>
    <string name="title_section2_physician">During Treatment</string>
    <string name="title_section3_physician">Post Treatment</string>
    <string name="title_section4">Others</string>
    <string name="nav_drawer_item1">My Patients</string>
    <string name="nav_drawer_item2">My Appointments</string>
    <string name="nav_drawer_item3">Profile Settings</string>
    <string name="nav_drawer_item4">Today Schedule</string>
    <string name="nav_drawer_item5">Subscription</string>
    <string name="nav_drawer_item6">Add Helper</string>
    <string name="nav_drawer_item7">Account Verification</string>
    <string name="nav_drawer_item8">Share</string>
    <string name="nav_drawer_item9">Feedback</string>
    <string name="nav_drawer_item10">News</string>
    <string name="nav_drawer_item11">My Associations</string>
    <string name="delete_button">"Delete Record</string>
    <string name="edit_button">"Edit Record</string>
    <string name="title_activity_edit_patient_data">Edit Patient Profile</string>
    <string name="title_activity_documents">documents</string>
    <string name="title_activity_image_full">ImageFull</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_image">FullImage</string>
    <string name="title_activity_clinical_notes">ClinicalNotesActivity</string>
    <string name="title_activity_add_clinical_notes">ClinicalNotes</string>
    <string name="title_activity_tabbed_activity_check">Clinical Notes</string>
    <string name="terms_of_use"><u>Terms Of Use</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="title_activity_tabbed__activity__functionality">TABBED_ACTIVITY_FUNCTIONALITY
    </string>
    <string name="title_activity_history_">History</string>
    <string name="title_activity_treatment_">Treatment</string>
    <string name="title_activity_exam_">Clinical Examination</string>
    <string name="title_activity_investigation_">Investigation_Activity</string>
    <string name="title_activity_history_view">history_view</string>
    <string name="title_activity_add_view_notes">Add_view_notes</string>
    <string name="title_activity_view__media_notes_grid">View_Media_notes_grid</string>
    <string name="title_activity_video_full">VideoFull</string>
    <string name="title_activity_video_view">VideoView</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_view_notes_version">view_notes_version</string>
    <string name="title_activity_sync_">Save Data To Cloud</string>
    <string name="title_activity_data_sync_activity">Save Data To Cloud</string>
    <string name="title_activity_view_all_versions">All Versions</string>
    <string name="title_activity_title_">Doc Box</string>
    <string name="start_image_capture">Take a New Picture</string>
    <string name="capture_image">Snap it!</string>
    <string name="save_image">Save Picture</string>
    <string name="recapture_image">Retake Picture</string>
    <string name="capturing_image">Taking New Picture</string>
    <string name="done">Done</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string-array name="genderSpinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="specialitiesSurgery">
        <item>Orthopedic Surgery</item>
        <item>Ophthalmics</item>
        <item>Dental Surgery</item>
        <item>ENT</item>
        <item>Cardiology</item>
        <item>OBS and Gynecology</item>
        <item>General Surgery</item>
        <item>Plastic Surgery</item>
        <item>Neuro Surgery</item>
        <item>Pediatric Surgery</item>
        <item>Urology</item>
        <item>Surgical Gastroenterology</item>
        <item>CTVS</item>
        <item>Surgical Oncology</item>
        <item>Endocrine Surgery</item>

    </string-array>
    <string-array name="specialitiesMedicine">
        <item>General Medicine</item>
        <item>Neurology</item>
        <item>Pediatrics</item>
        <item>Internal Medicine</item>
        <item>Neurology</item>
        <item>Medical Gastroenterology</item>
        <item>Nephrology</item>
        <item>Medical Endocrinology</item>
        <item>Rheumatology</item>
        <item>Neonatology</item>
        <item>Radiotherapy</item>
        <item>Radiology</item>
        <item>Anesthesia and Critical Care</item>
        <item>Respiratory Medicine</item>
        <item>Skin and VD</item>
        <item>Clinical Hematology</item>
        <item>Ayurveda</item>

    </string-array>
    <string-array name="specialities">
        <item>Orthopedic Surgery</item>
        <item>Ophthalmics</item>
        <item>Dentist</item>
        <item>Cardiology</item>
        <item>General Medicine</item>
        <item>OBS and Gynecology</item>
        <item>Neurology</item>
        <item>Pediatrics</item>

        <item>ENT</item>
        <item>General Surgery</item>
        <item>Plastic Surgery</item>
        <item>Neurosurgery</item>
        <item>Pediatric Surgery</item>
        <item>Urology</item>
        <item>Surgical Gastroenterology</item>
        <item>CTVS</item>
        <item>Surgical Oncology</item>
        <item>Endocrine Surgery</item>


        <item>Internal Medicine</item>

        <item>Medical Gastroenterology</item>
        <item>Nephrology</item>
        <item>Medical Endocrinology</item>
        <item>Rheumatology</item>


        <item>Neonatology</item>
        <item>Radiotherapy</item>
        <item>Radiology</item>
        <item>Anesthesia and Critical Care</item>
        <item>Respiratory Medicine</item>
        <item>Skin and VD</item>
        <item>Clinical Hematology</item>
        <item>Psychiatry</item>
        <item>Others</item>
        <item>Ayurveda</item>

    </string-array>
    <string-array name="specialitiesNews">
        <item>All Specialities News</item>
        <item>Orthopedic Surgery News</item>
        <item>Ophthalmics News</item>
        <item>Dentist News</item>
        <item>Cardiology News</item>
        <item>General Medicine News</item>
        <item>OBS and Gynecology News</item>
        <item>Neurology News</item>
        <item>Pediatrics News</item>

        <item>ENT News</item>
        <item>General Surgery News</item>
        <item>Plastic Surgery News</item>
        <item>Neurosurgery News</item>
        <item>Pediatric Surgery News</item>
        <item>Urology News</item>
        <item>Surgical Gastroenterology</item>
        <item>CTVS News</item>
        <item>Surgical Oncology News</item>
        <item>Endocrine Surgery News</item>


        <item>Internal Medicine News</item>

        <item>Medical Gastroenterology</item>
        <item>Nephrology News</item>
        <item>Medical Endocrinology News</item>
        <item>Rheumatology News</item>


        <item>Neonatology News</item>
        <item>Radiotherapy News</item>
        <item>Radiology News</item>
        <item>Anesthesia and Critical Care</item>
        <item>Respiratory Medicine News</item>
        <item>Skin and VD News</item>
        <item>Clinical Hematology News</item>
        <item>Psychiatry News</item>

    </string-array>
    <string name="title_activity_generic_notes">genericNotesActivity</string>
    <string name="title_activity_follow_up">Add Follow Up</string>
    <string name="title_activity_view_follow_up_">View Follow Up</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="title_activity_appointment_settings">Appointment Seetings</string>
    <string name="title_activity_main2">Home</string>
    <string name="title_activity_data_restore">Restore All Data</string>
    <string name="title_activity_appointment_settings_check">Appointment Settings</string>
    <string name="title_activity_account_verification">Account Verification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity__video__capture">Activity_Video_Capture</string>
    <string name="title_activity_payment_activity">payment_activity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_subscription">Subscription options</string>
    <string name="title_activity_patients_today">Appointments for Today</string>
    <string name="title_activity_payment_option_not_available">Payment Options
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>