<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="activity.DisplayMessageActivity"
    android:importantForAccessibility="yes"
    android:nestedScrollingEnabled="true"
    android:layoutMode="clipBounds">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linear_layout3"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_weight="1"
            android:layout_gravity="bottom|center"
            android:inputType="textCapWords|textPersonName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:id="@+id/button"
            android:visibility="gone"

            android:onClick="startCamera"
            android:layout_marginTop="10dp"
            android:layout_weight="0" />

        <ImageView
            android:layout_width="wrap_content"
            android:onClick="startCamera"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:contentDescription="@string/display_photo"
            android:layout_weight="0"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_photo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linear_layout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout3">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age"
            android:id="@+id/edit_age"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/edit_height"
            android:layout_alignWithParentIfMissing="true"
            android:inputType="number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_height"
            android:id="@+id/edit_height"
            android:layout_weight="1"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignTop="@+id/edit_age"
            android:layout_alignRight="@+id/edit_name"
            android:layout_alignEnd="@+id/edit_name"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:id="@+id/edit_gender"
        android:contentDescription="@string/gender_select"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio1"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/edit_email">

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/radio1"
            android:layout_height="wrap_content"

            android:text="@string/male_radio"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/radio2"
            android:layout_height="wrap_content"

            android:text="@string/female_radio" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_patient"
        android:id="@+id/save_patient_button"
        android:layout_marginTop="10dp"
        android:onClick="saveNewPatient"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_gender" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_occupation"
        android:id="@+id/edit_occupation"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_add" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_add"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linear_layout"
        android:hint="@string/enter_add"
        android:layout_alignParentRight="true"
        android:inputType="textPostalAddress|textMultiLine" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_phone"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_phone"
        android:layout_below="@+id/edit_diagnosis" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_email"
        android:layout_below="@+id/edit_phone"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:hint="@string/enter_email"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_diagnosis"
        android:layout_below="@+id/edit_occupation"
        android:hint="@string/enter_diagnosis"
        android:layout_marginTop="10dp" />


</RelativeLayout>
</ScrollView>